PR/47877: Michael van Elst: Disable and enable software flow control properly